[package]
name = "mirage"
version = "0.1.2"
edition = "2021"
authors = ["John Basrai <John@Basrai.dev>"]
description = "A fast and simple command-line image processing tool"
readme = "README.md"
homepage = "https://github.com/yourusername/mirage"
repository = "https://github.com/yourusername/mirage"
license = "MIT"
keywords = ["image", "processing", "cli", "graphics", "fractal"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [
    "tests/*",
    "examples/*",
    "*.png",
    "*.jpg",
    "*.jpeg"
]

[dependencies]
image = "0.24"
num-complex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "mirage"
path = "src/main.rs"